@@ -19,6 +19,7 @@ Revision history for Net-Silverpeak-Orchestrator
     - add list_servicegroups method
     - add create_or_update_servicegroup method
     - add get_servicegroup method
+    - add delete_servicegroup method
 
 0.001002  2021-02-19 07:35:30+01:00 Europe/Vienna
     - fix Data::Dumper::Concise usage in t/api.t
